fix(loki): Update config

--- a/kubernetes/main/apps/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/loki/app/helmrelease.yaml
@@ -23,18 +23,42 @@ spec:
       podAnnotations:
         secret.reloader.stakater.com/reload: loki-secret
 
+      auth_enabled: false
+
+      analytics:
+        reporting_enabled: false
+
+      compactor:
+        working_directory: /var/loki/compactor/retention
+        delete_request_store: s3
+        retention_enabled: true
+
+      frontend:
+        max_outstanding_per_tenant: 4096
+
       ingester:
         chunk_encoding: snappy
 
-      storage:
-        type: s3
-        bucketNames:
-          chunks: loki-chunks
-          ruler: loki-ruler
-          admin: loki-admin
-        s3:
-          s3ForcePathStyle: true
-          insecure: true
+      limits_config:
+        ingestion_burst_size_mb: 128
+        ingestion_rate_mb: 64
+        max_query_parallelism: 100
+        per_stream_rate_limit: 64M
+        per_stream_rate_limit_burst: 128M
+        reject_old_samples: true
+        reject_old_samples_max_age: 168h
+        retention_period: 30d
+        shard_streams:
+          enabled: true
+        split_queries_by_interval: 1h
+
+      query_scheduler:
+        max_outstanding_requests_per_tenant: 4096
+
+      rulerConfig:
+        enable_api: true
+        enable_alertmanager_v2: true
+        alertmanager_url: http://alertmanager.monitoring.svc.cluster.local:9093
 
       schemaConfig:
         configs:
@@ -46,47 +70,20 @@ spec:
               prefix: loki_index_
               period: 24h
 
-      structuredConfig:
-        auth_enabled: false
+      server:
+        log_level: info
+        grpc_server_max_recv_msg_size: 8388608
+        grpc_server_max_send_msg_size: 8388608
 
-        server:
-          log_level: info
-          http_listen_port: 3100
-          grpc_listen_port: 9095
-          grpc_server_max_recv_msg_size: 8388608
-          grpc_server_max_send_msg_size: 8388608
-
-        limits_config:
-          ingestion_burst_size_mb: 128
-          ingestion_rate_mb: 64
-          max_query_parallelism: 100
-          per_stream_rate_limit: 64M
-          per_stream_rate_limit_burst: 128M
-          reject_old_samples: true
-          reject_old_samples_max_age: 168h
-          retention_period: 30d
-          shard_streams:
-            enabled: true
-          split_queries_by_interval: 1h
-
-        query_scheduler:
-          max_outstanding_requests_per_tenant: 4096
-
-        frontend:
-          max_outstanding_per_tenant: 4096
-
-        ruler:
-          enable_api: true
-          enable_alertmanager_v2: true
-          alertmanager_url: http://alertmanager.monitoring.svc.cluster.local:9093
-          storage:
-            type: local
-            local:
-              directory: /rules
-          rule_path: /rules
-
-        analytics:
-          reporting_enabled: false
+      storage:
+        type: s3
+        bucketNames:
+          chunks: loki-chunks
+          ruler: loki-ruler
+          admin: loki-admin
+        s3:
+          s3ForcePathStyle: true
+          insecure: true
 
     gateway:
       replicas: 3
