feat: Add voice vlan

--- a/kubernetes/utility/apps/network/bind/app/config/named.conf
+++ b/kubernetes/utility/apps/network/bind/app/config/named.conf
@@ -7,6 +7,7 @@ acl "trusted" {
   10.1.4.0/23;    # IOT
   10.1.6.0/24;    # VIDEO
   10.1.7.0/24;    # NTP
+  10.1.8.0/24;    # VOICE
   192.168.2.0/24; # GUEST
   10.0.11.0/24;   # WIREGUARD
   10.244.0.0/16;  # LOCAL CLUSTER
