--- a/kubernetes/utility/apps/network/dnsdist/app/config/dnsdist.conf
+++ b/kubernetes/utility/apps/network/dnsdist/app/config/dnsdist.conf
@@ -83,4 +83,5 @@ addAction("10.1.3.0/24", PoolAction("blocky"))         -- wireless vlan
 addAction("10.1.4.0/23", PoolAction("blocky"))         -- iot vlan
 addAction("10.1.6.0/24", PoolAction("udm"))            -- video vlan
 addAction("10.1.7.0/24", PoolAction("udm"))            -- ntp vlan
+addAction("10.1.8.0/24", PoolAction("udm"))            -- voice vlan
 addAction("10.0.11.0/24", PoolAction("blocky"))        -- wg_trusted vlan
