feat(utility): bgp again

--- a/kubernetes/utility/apps/kube-system/cilium/app/kustomization.yaml
+++ b/kubernetes/utility/apps/kube-system/cilium/app/kustomization.yaml
@@ -4,8 +4,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./helmrelease.yaml
-  # - ./bgppeeringpolicy.yaml
-  - ./l2.yaml
+  - ./bgppeeringpolicy.yaml
+  # - ./l2.yaml
 configMapGenerator:
   - name: cilium-values
     files:
