--- a/kubernetes/utility/bootstrap/talos/talconfig.yaml
+++ b/kubernetes/utility/bootstrap/talos/talconfig.yaml
@@ -35,8 +35,6 @@ nodes:
             - hardwareAddr: 48:21:0b:3e:d8:14
               driver: igc
         dhcp: true
-        vip:
-          ip: &vipIp 10.1.1.7
     patches:
       - &kubelet_extra_mounts |-
         machine:
@@ -52,7 +50,7 @@ nodes:
 
   - hostname: k8s5.greyrock.io
     ipAddress: 10.1.1.9
-    controlPlane: true
+    controlPlane: false
     installDiskSelector:
       size: "<= 256GB"
       model: "TS240GMTS420S"
@@ -68,41 +66,6 @@ nodes:
             - hardwareAddr: 48:21:0b:3e:db:da
               driver: igc
         dhcp: true
-        vip:
-          ip: *vipIp
-    patches:
-      - &kubelet_extra_mounts |-
-        machine:
-          kubelet:
-            extraMounts:
-              - destination: /var/mnt/sata
-                type: bind
-                source: /var/mnt/sata
-                options:
-                  - rbind
-                  - rshared
-                  - rw
-
-  - hostname: k8s6.greyrock.io
-    ipAddress: 10.1.1.10
-    controlPlane: true
-    installDiskSelector:
-      size: "<= 256GB"
-      model: "TS240GMTS420S"
-    machineDisks:
-      - device: /dev/disk/by-id/nvme-WD_Blue_SN570_500GB_22410H804662
-        partitions:
-          - mountpoint: /var/mnt/sata
-    networkInterfaces:
-      - interface: bond0
-        bond:
-          mode: active-backup
-          deviceSelectors:
-            - hardwareAddr: 48:21:0b:3e:d8:02
-              driver: igc
-        dhcp: true
-        vip:
-          ip: *vipIp
     patches:
       - &kubelet_extra_mounts |-
         machine:
@@ -203,6 +166,97 @@ controlPlane:
     - |-
       - op: remove
         path: /cluster/apiServer/admissionControl
+
+    # Kubelet configuration
+    - |-
+      machine:
+        kubelet:
+          extraArgs:
+            feature-gates: GracefulNodeShutdown=true,NewVolumeManagerReconstruction=false
+            rotate-server-certificates: "true"
+          extraConfig:
+            maxPods: 150
+          nodeIP:
+            validSubnets:
+                - 10.1.1.0/24
+
+    # Custom sysctls
+    - |-
+      machine:
+        sysctls:
+          fs.inotify.max_queued_events: "65536"
+          fs.inotify.max_user_instances: "8192"
+          fs.inotify.max_user_watches: "524288"
+          net.core.rmem_max: "2500000"
+          net.core.wmem_max: "2500000"
+
+worker:
+  schematic:
+    customization:
+      systemExtensions:
+        officialExtensions:
+          - siderolabs/intel-ucode
+
+  patches:
+    # Disable search domain everywhere
+    - |-
+      machine:
+        network:
+          disableSearchDomain: true
+
+    # Force nameserver
+    - |-
+      machine:
+        network:
+          nameservers:
+            - 10.1.0.50
+
+    # Configure NTP
+    - |-
+      machine:
+        time:
+          disabled: false
+          servers:
+            - 10.1.7.2
+            - 10.1.7.3
+            - 10.1.7.4
+            - 10.1.7.5
+
+    # Cluster configuration
+    - |-
+      cluster:
+        allowSchedulingOnMasters: true
+        proxy:
+          disabled: true
+
+    # Configure containerd
+    - |-
+      machine:
+        files:
+          - op: create
+            path: /etc/cri/conf.d/20-customization.part
+            content: |
+              [plugins]
+                [plugins."io.containerd.grpc.v1.cri"]
+                  enable_unprivileged_ports = true
+                  enable_unprivileged_icmp = true
+
+    # Configure nfs mount options
+    - |-
+      machine:
+        files:
+          - op: overwrite
+            path: /etc/nfsmount.conf
+            permissions: 0o644
+            content: |
+              [ NFSMount_Global_Options ]
+              nfsvers=4.2
+              hard=True
+              noatime=True
+              nodiratime=True
+              rsize=131072
+              wsize=131072
+              nconnect=8
 
     # Kubelet configuration
     - |-
