feat(dnsdist): Update config

--- a/kubernetes/utility/apps/network/dnsdist/app/config/dnsdist.conf
+++ b/kubernetes/utility/apps/network/dnsdist/app/config/dnsdist.conf
@@ -65,8 +65,8 @@ pc = newPacketCache(10000, {
 getPool(""):setCache(pc)
 
 -- Request logging, uncomment to log DNS requests/responses to stdout
--- addAction(AllRule(), LogAction("", false, false, true, false, false))
--- addResponseAction(AllRule(), LogResponseAction("", false, true, false, false))
+addAction(AllRule(), LogAction("", false, false, true, false, false))
+addResponseAction(AllRule(), LogResponseAction("", false, true, false, false))
 
 -- Routing rules
 addAction("zip", DropAction())                          -- stop processing
@@ -84,4 +84,5 @@ addAction("10.1.4.0/23", PoolAction("blocky"))         -- iot vlan
 addAction("10.1.6.0/24", PoolAction("udm"))            -- video vlan
 addAction("10.1.7.0/24", PoolAction("udm"))            -- ntp vlan
 addAction("10.1.8.0/24", PoolAction("udm"))            -- voice vlan
+addAction("10.244.0.0/16", PoolAction("udm"))          -- utility cluster
 addAction("10.0.11.0/24", PoolAction("blocky"))        -- wg_trusted vlan
