--- a/kubernetes/main/bootstrap/talos/talconfig.yaml
+++ b/kubernetes/main/bootstrap/talos/talconfig.yaml
@@ -41,6 +41,8 @@ nodes:
             dhcp: true
             dhcpOptions:
               routeMetric: 4096
+        vip:
+          ip: &vipIp 10.1.1.2
     patches:
       - &kubelet_extra_mounts |-
         machine:
@@ -78,6 +80,8 @@ nodes:
             dhcp: true
             dhcpOptions:
               routeMetric: 4096
+        vip:
+          ip: *vipIp
     patches:
       - *kubelet_extra_mounts
 
@@ -105,6 +109,8 @@ nodes:
             dhcp: true
             dhcpOptions:
               routeMetric: 4096
+        vip:
+          ip: *vipIp
     patches:
       - *kubelet_extra_mounts
 
