--- a/kubernetes/main/apps/monitoring/blackbox-exporter/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/blackbox-exporter/app/helmrelease.yaml
@@ -116,9 +116,9 @@ spec:
           url: pikvm.greyrock.io
 
         # Other devices
-        - module: http_2xx
-          name: zigbee-controller-http
-          url: "http://slzb-06.greyrock.io"
+        - module: icmp
+          name: zigbee-controller-icmp
+          url: slzb-06.greyrock.io
 
         - module: icmp
           name: ping-cloudflare
