--- a/kubernetes/main/apps/home-automation/namespace.yaml
+++ b/kubernetes/main/apps/home-automation/namespace.yaml
@@ -5,3 +5,5 @@ metadata:
   name: home-automation
   labels:
     kustomize.toolkit.fluxcd.io/prune: disabled
+  annotations:
+    volsync.backube/privileged-movers: "true"
