Revert "fix(blackbox-exporter): Permission issues"
This reverts commit 1a34c8b76a683c728208ffbb0ac0838b06ce46a0.

--- a/kubernetes/main/apps/monitoring/blackbox-exporter/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/blackbox-exporter/app/helmrelease.yaml
@@ -87,17 +87,10 @@ spec:
     pspEnabled: false
 
     securityContext:
-      # IPv6 sockets will not work otherwise.
-      # See https://github.com/prometheus/blackbox_exporter/issues/1023 for details
-      runAsUser: 0
-      runAsGroup: 0
-      runAsNonRoot: false
       readOnlyRootFilesystem: true
-      allowPrivilegeEscalation: true
+      allowPrivilegeEscalation: false
       capabilities:
-        add:
-          - "NET_RAW"
-          - "NET_ADMIN"
+        add: ["NET_RAW"]
 
     serviceMonitor:
       enabled: true
