--- a/kubernetes/main/apps/monitoring/blackbox-exporter/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/blackbox-exporter/app/helmrelease.yaml
@@ -21,6 +21,14 @@ spec:
     image:
       registry: quay.io
 
+    podAnnotations:
+      k8s.v1.cni.cncf.io/networks: |
+        [{
+          "name":"multus-iot",
+          "namespace": "network",
+          "ips": ["10.1.4.156/23"]
+        }]
+
     podSecurityContext:
       sysctls:
         - name: net.ipv4.ping_group_range
