--- a/kubernetes/utility/apps/database/crunchy-postgres-operator/cluster/kustomization.yaml
+++ b/kubernetes/utility/apps/database/crunchy-postgres-operator/cluster/kustomization.yaml
@@ -3,8 +3,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # Pre Flux-Kustomizations
-  - ./namespace.yaml
-  # Flux-Kustomizations
-  - ./crunchy-postgres-operator/ks.yaml
-  - ./dragonfly/ks.yaml
+  - ./externalsecret.yaml
+  - ./postgrescluster.yaml
