--- a/kubernetes/utility/apps/database/crunchy-postgres-operator/operator/helmrelease.yaml
+++ b/kubernetes/utility/apps/database/crunchy-postgres-operator/operator/helmrelease.yaml
@@ -3,24 +3,23 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
-  name: spegel
+  name: crunchy-postgres-operator
 spec:
   interval: 30m
   chart:
     spec:
-      chart: spegel
-      version: v0.0.21
+      chart: pgo
+      version: 5.5.1
       sourceRef:
         kind: HelmRepository
-        name: spegel
+        name: crunchydata
         namespace: flux-system
-      interval: 30m
+      interval: 5m
+  install:
+    crds: CreateReplace
+  upgrade:
+    crds: CreateReplace
   values:
-    spegel:
-      containerdSock: /run/containerd/containerd.sock
-      containerdRegistryConfigPath: /etc/cri/conf.d/hosts
-    service:
-      registry:
-        hostPort: 29999
-    serviceMonitor:
-      enabled: true
+    install:
+      clusterLabels:
+        app.kubernetes.io/name: pgo
