--- a/kubernetes/utility/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/utility/flux/repositories/helm/kustomization.yaml
@@ -6,6 +6,7 @@ namespace: flux-system
 resources:
   - bjw-s.yaml
   - cilium.yaml
+  - crunchydata.yaml
   - external-secrets.yaml
   - ingress-nginx.yaml
   - intel.yaml
