--- a/kubernetes/main/apps/home-automation/ambientweather2mqtt/app/helmrelease.yaml
+++ b/kubernetes/main/apps/home-automation/ambientweather2mqtt/app/helmrelease.yaml
@@ -23,6 +23,13 @@ spec:
           labels:
             ingress.home.arpa/lan: allow
             egress.home.arpa/kubedns: allow # FIXME: Remove when clusterNetworkPolicy is in place
+          annotations:
+            k8s.v1.cni.cncf.io/networks: |
+              [{
+                "name":"multus-iot",
+                "namespace": "network",
+                "ips": ["10.1.4.157/23"]
+              }]
 
         containers:
           ambientweather2mqtt:
