feat(ambientweather2mqtt): IOT interface

--- a/kubernetes/main/apps/home-automation/ambientweather2mqtt/app/externalsecret.yaml
+++ b/kubernetes/main/apps/home-automation/ambientweather2mqtt/app/externalsecret.yaml
@@ -20,6 +20,7 @@ spec:
         MQTT_PASSWORD: "{{ .mosquitto_ambientweather2mqtt_password }}"
         PORT: "8080"
         MQTT_REJECT_UNAUTHORIZED: "false"
+        LOG_LEVEL: "info"
   dataFrom:
     - extract:
         key: mosquitto
