feat(ambientweather2mqtt): reloader

--- a/kubernetes/main/apps/home-automation/ambientweather2mqtt/app/helmrelease.yaml
+++ b/kubernetes/main/apps/home-automation/ambientweather2mqtt/app/helmrelease.yaml
@@ -19,6 +19,9 @@ spec:
   values:
     controllers:
       ambientweather2mqtt:
+        annotations:
+          reloader.stakater.com/auto: "true"
+
         pod:
           labels:
             ingress.home.arpa/lan: allow
