--- a/kubernetes/utility/apps/network/blocky/ks.yaml
+++ b/kubernetes/utility/apps/network/blocky/ks.yaml
@@ -10,6 +10,8 @@ spec:
   dependsOn:
     - name: external-secrets-stores
     - name: dragonfly-cluster
+    - name: crunchy-postgres-operator-cluster
+    - name: crunchy-postgres-operator-secretstore
   interval: 10m
   path: ./kubernetes/utility/apps/network/blocky/app
   prune: true
