--- a/kubernetes/utility/apps/network/blocky/app/kustomization.yaml
+++ b/kubernetes/utility/apps/network/blocky/app/kustomization.yaml
@@ -3,9 +3,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ./externalsecret.yaml
   - ./helmrelease.yaml
 configMapGenerator:
-  - name: blocky-configmap
+  - name: blocky-config-tpl
     files:
       - ./config/config.yml
   - name: blocky-lists-configmap
@@ -14,5 +15,3 @@ configMapGenerator:
       - ./lists/icloud-private-relay.txt
 generatorOptions:
   disableNameSuffixHash: true
-  annotations:
-    kustomize.toolkit.fluxcd.io/substitute: disabled
