--- a/kubernetes/main/apps/media/tautulli/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/tautulli/app/helmrelease.yaml
@@ -35,8 +35,14 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/onedr0p/tautulli
-              tag: 2.13.4@sha256:809bccf944ee56c33af99993841e797e18dc85243639788de3c9d668c291b215
+              repository: ghcr.io/tautulli/tautulli
+              tag: v2.13.4
+            command: ["/usr/local/bin/python", "Tautulli.py"]
+            args: [
+              "--config", "/config/config.ini",
+              "--datadir", "/config",
+              "--port", "80"
+            ]
             probes:
               liveness:
                 enabled: true
@@ -59,7 +65,7 @@ spec:
         controller: tautulli
         ports:
           http:
-            port: 8181
+            port: 80
 
     ingress:
       app:
