feat(omni): More config

--- a/.omni/clusters/main/k8s1.yaml
+++ b/.omni/clusters/main/k8s1.yaml
@@ -1,22 +1,24 @@
 machine:
   network:
-    hostname: "k8s6"
+    hostname: "k8s1"
     interfaces:
       - interface: bond0
         bond:
           interfaces: []
           deviceSelectors:
-            - hardwareAddr: 48:21:0b:3e:d8:02
-              driver: igc
+            - hardwareAddr: 00:30:93:12:38:d3
+              driver: atlantic
           mode: active-backup
         dhcp: true
         vip:
-          ip: 10.1.1.7
+          ip: 10.1.1.2
 
   disks:
-    - device: /dev/disk/by-id/nvme-WD_Blue_SN570_500GB_22410H804662
+    - device: /dev/disk/by-id/ata-INTEL_SSDSC2BB800G4_BTWL406300TG800RGN
       partitions:
         - mountpoint: /var/mnt/sata
 
   systemExtensions:
     - siderolabs/intel-ucode
+    - siderolabs/i915-ucode
+    - siderolabs/gasket-driver
