--- a/.omni/docker-composer.yml
+++ b/.omni/docker-composer.yml
@@ -9,7 +9,7 @@ services:
       POSTGRES_USER: ${POSTGRESQL_USER}
       POSTGRES_PASSWORD: ${POSTGRESQL_PASS}
     networks:
-      - local-keycloak
+      - local-omni
 
   keycloak:
     depends_on:
@@ -21,12 +21,12 @@ services:
       DB_DATABASE: ${POSTGRESQL_DB}
       DB_USER: ${POSTGRESQL_USER}
       DB_PASSWORD: ${POSTGRESQL_PASS}
-    image: jboss/keycloak:${KEYCLOAK_VERSION}
+    image: quay.io/keycloak/keycloak:24.0.3
     ports:
       - "28080:8080"
     restart: unless-stopped
     networks:
-      - local-keycloak
+      - local-omni
 
 networks:
-  local-keycloak:
+  local-omni:
