--- a/.omni/containers/omni/docker-compose.yml
+++ b/.omni/containers/omni/docker-compose.yml
@@ -23,12 +23,10 @@ services:
             - --siderolink-api-advertised-url=https://omni.greyrock.io:8090/
             - --siderolink-wireguard-advertised-addr=10.1.1.11:50180
             - --advertised-kubernetes-proxy-url=https://omni.greyrock.io:8100/
-            - --auth-auth0-enabled=true
-            - --auth-auth0-domain=dev-wdolvr4vthdpmy13.us.auth0.com
-            - --auth-auth0-client-id=O1IjsnLbRSevM1tCtRI3Ib0Gd2Z1qc0d
-            - --initial-users=tpunderson@greyrock.io
+            - --auth-saml-enabled=true
+            - --auth-saml-url=https://omni.greyrock.io:8443/realms/omni/protocol/saml/descriptor
         volumes:
-            - ./data/etcd:/_out/etcd
             - /home/todd/certs/greyrock.io_ecc/fullchain.pem:/tls.crt
             - /home/todd/certs/greyrock.io_ecc/greyrock.io.key:/tls.key
             - /home/todd/apps/omni/data/omni.asc:/omni.asc
+            - /home/todd/apps/omni/data/etcd:/_out/etcd
