feat(omni): More baseline

--- a/.github/labeler.yaml
+++ b/.github/labeler.yaml
@@ -16,3 +16,6 @@ cluster/nas:
 cluster/utility:
   - changed-files:
       - any-glob-to-any-file: kubernetes/utility/**/*
+cluster/omni:
+  - changed-files:
+      - any-glob-to-any-file: kubernetes/omni/**/*
