--- a/kubernetes/omni/apps/network/dnsmasq/app/kustomization.yaml
+++ b/kubernetes/omni/apps/network/dnsmasq/app/kustomization.yaml
@@ -3,9 +3,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # Pre Flux-Kustomizations
-  - ./namespace.yaml
-  # Flux-Kustomizations
-  - ./dnsmasq/ks.yaml
-  - ./external-dns/ks.yaml
-  - ./ingress-nginx/ks.yaml
+  - ./helmrelease.yaml
