feat(omni): Deploy omni

--- a/kubernetes/omni/apps/network/omni/app/externalsecret.yaml
+++ b/kubernetes/omni/apps/network/omni/app/externalsecret.yaml
@@ -14,7 +14,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        omni.asc: "{{ .omni_omni.asc }}"
+        omni.asc: "{{ .omni_pgp_key }}"
   dataFrom:
     - extract:
         key: omni
